Chanes for myself
Changes to fit my valentines

--- a/Space.html
+++ b/Space.html
@@ -10,7 +10,7 @@
             margin-top: 30px;
             font-family: 'Courier';
             background-color:#ffdfa8;
-            color: #FF9494;
+            color: #ff6868;
         }
 		#thankyou {
 			font-size: 50px;
@@ -34,10 +34,10 @@
 	</style>
 </head>
 <body>
-	<div id="thankyou"><b>Thank you</b></div>
+	<div id="thankyou"><b>Okay i understand</b></div>
 
-	<img id = "rizz" src = 'rizz.gif' alt = "rizzler god" class="responsive">
+	<img id = "rizz" src = 'images.jpg' alt = "Sad" class="responsive">
 	<br>
-	<button class="button" onclick="location.href='date.html'"> SUPER WOW! GREAT</button>
+	<button class="button" onclick="location.href='index.html'"> If you change your mind</button>
 </body>
 </html>
