--- a/date.html
+++ b/date.html
@@ -9,7 +9,7 @@
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-            background-color:#FFF5E4;
+            background-color:#ffdfa8;
             color: #FF9494;
         }
 	h1 {
@@ -30,20 +30,18 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 10px;
-            background-color:#FFE3E1;
-            color: #e67373;
+			background-color:#ff796f;
+            color: #ffffff;
             border-radius: 12px;
             border: 2px solid #FFE3E1;
         }
 	</style>
 </head>
 <body>
-	<h1 title="choose a date">Are you free on ...</h1>
-	<p>(select a date)</p>
+	<h1 title="choose a date">I can't see the response but when are you free?</h1>
+	<p>Chat me or email me the date please.</p>
 	<form action="/action_page.php" class="form-group">
-		<label>Which day: </label>
-		<input type="date">
-		<button class = "button"type="submit" formaction="food.html">Submit</button>
+		<button class = "button"type="submit" formaction="food.html">Okay will do</button>
 	</form>
 </body>
 </html>
