--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be My Valentine</title>
+    <title>Space?</title>
     <style>
         body {
             text-align: center;
             margin-top: 30px;
             font-family: 'Courier';
-			background-color:#FFF5E4;
-            color: #FF9494;
+			background-color:#ffdfa8;
+            color:#ff6868;
         }
         #valentineQuestion {
             font-size: 50px;
@@ -23,17 +23,17 @@
             margin: 10px;
             font-family: 'courier';
             margin-bottom: 20px;
-            background-color:#FFE3E1;
-            color: #e67373;
+            background-color:#ff796f;
+            color: #ffffff;
             border-radius: 12px;
             border: 2px solid #FFE3E1;
         }
     </style>
 </head>
 <body>
-    <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
-    <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
-    <button class="answerButton" id="noButton">I no no wanna o(╥﹏╥)o</button>
+    <div id="valentineQuestion"><b>Do you still need some space?</b></div>
+    <button class="answerButton" onclick="location.href='Space.html'">Yes</button>
+    <button class="answerButton" onclick="location.href='thankyou.html'">No</button>
     <br>
     <img src ='cat.gif' alt = 'cat asking question' class="responsive">
 
