--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <div id="valentineQuestion"><b>Do you still need some space?</b></div>
+    <div id="valentineQuestion"><b>Do you want to go on a date with me?</b></div>
     <button class="answerButton" onclick="location.href='Space.html'">Yes</button>
     <button class="answerButton" onclick="location.href='thankyou.html'">No</button>
     <br>
