--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </head>
 <body>
     <div id="valentineQuestion"><b>Do you want to go on a date with me?</b></div>
-    <button class="answerButton" onclick="location.href='Space.html'">Yes</button>
-    <button class="answerButton" onclick="location.href='thankyou.html'">No</button>
+    <button class="answerButton" onclick="location.href='thankyou.html'">Yes</button>
+    <button class="answerButton" onclick="location.href='Space.html'">No</button>
     <br>
     <img src ='cat.gif' alt = 'cat asking question' class="responsive">
 
